# STAR-Analysis

./: .gitignore  Plot_TofEfficiency.C  README.md  STAR-AnalysisTree.txt  beamLine.txt  building_MonteCarloEfficiency.sh
Inclusive_Analysis/star-upc/: AnaOutput_NewAnalysis_FixedDCA.root  AnaOutput_NewAnalysis_FixedDCA_anglecheck.root  AnaOutput_True_vs_detector_comparison_no_RP_no_TOF_kaons.root  CMakeLists.txt  K0.list  Lambda.list  README.md  building.sh  buildingSTAR.sh  kod_do_histogramów.ipynb  quicktest.sh  sweep.C
Inclusive_Analysis/star-upc/CPT/: FinalFit.cxx  FinalFitLambda.cxx  Hist.cxx
Inclusive_Analysis/star-upc/Different_CMakes/: CMakeListsNormal.txt  CMakeListsStar.txt
Inclusive_Analysis/star-upc/execs/PhD_deg_analysis/: Differential_crosssection_phi.cxx  Inclusive_analysis_Kstar_phi_old_data.cxx  Inclusive_analysis_Kstar_phi_old_data_TOF_tests.cxx  Inclusive_analysis_Kstar_phi_old_data_histograms.cxx  Inclusive_analysis_Kstar_phi_old_data_no_TOF.cxx  Overlay_signal_over_bcg_Kstar_phi.cxx  Preselection_NOAFTERBURNER_olddata_from_beginning.cxx  Preselection_olddata_from_beginning.cxx  Preselection_olddata_from_beginning_only_RP_cuts.cxx  Preselection_olddata_from_beginning_pdf_creator.cxx  Presentation_pdf_creator.cxx
Inclusive_Analysis/star-upc/execs/eng_deg_analysis/: Filter-RP-cuts-alternative.cxx  Filter-RP-cuts-exact-alternative.cxx  Filter-RP-cuts-minus-fiducial.cxx  Filter-RP-cuts.cxx  Filter-everything-except-fiducial-and-track-quality.cxx  Filter-fiducial-and-elastic-deletion.cxx  Filter-more-cuts.cxx  Filter_fiducial_and_elastic_deletion_lambda.cxx  Histograms.cxx  quickjob.sh
Inclusive_Analysis/star-upc/execs/holiday_analysis/: Algorithm_check.cxx  Fixed_DCA.cxx  Fixed_DCA_with_angle_check.cxx  True_detector_comparison_K0.cxx
Inclusive_Analysis/star-upc/execs/master_deg_analysis/: Basic_inclusive_analysis.cxx  Filter_everything_but_with_new_histogram_handling_test.cxx  Fitting_Gauss_2D_zerobias.cxx  Inclusive_analysis_with_STUPCV0.cxx  Partial_histograms.cxx  Preselection2_1vertex_4TOF_charge_kinem_Nhits_clusters.cxx  Preselection2_4TOF_charge_kinem_Nhits_clusters.cxx
Inclusive_Analysis/star-upc/include/: PartialHistograms.h  ProcessingInsideLoop.h  ProcessingOutsideLoop.h  StRPEvent.h  StUPCFilterRPUtil.h  StUPCTrack.h  UsefulThings.h
Inclusive_Analysis/star-upc/scripts/: FinalFitLambda.cxx
Inclusive_Analysis/star-upc/src/: DCA_Sweep.cxx  Filter_everything.cxx  New_analysis_basic_filter.cxx  StUPCFilterBemcUtil.cxx  StUPCFilterRPUtil.cxx  StUPCFilterTrgUtil.cxx  True_detector_comparison_K0.cxx
Inclusive_Analysis/star-upc/src/PhD_deg_analysis/: Differential_crossection_values.txt  Histograms_after_RP_cuts.cxx  Inclusive_analysis_K0S_Lambda_new_data.cxx  Inclusive_analysis_Kstar_phi_old_data.cxx  Inclusive_analysis_Kstar_phi_old_data_TOF_tests.cxx  Inclusive_analysis_Kstar_phi_old_data_background.cxx  Inclusive_analysis_Kstar_phi_old_data_background_TOF_mixed.cxx  Inclusive_analysis_Kstar_phi_old_data_histograms.cxx  Inclusive_analysis_Kstar_phi_old_data_no_TOF.cxx  Inclusive_analysis_Kstar_phi_old_data_paper_cuts.cxx  Overlay_MC_over_data_phi.cxx  Overlay_signal_over_bcg_Kstar_phi.cxx  Preselection_NOAFTERBURNER_olddata_from_beginning.cxx  Preselection_from_beginning.cxx  Presentation_pdf_creator.cxx  (+6 more)
Inclusive_Analysis/starsim/: CMakeLists.txt  building.sh  useful_commands.txt
Inclusive_Analysis/starsim/STAR_include/: AgStarParticle.h  StChain.h  StMessMgr.h  StarGenEventReader.h  Stsstream.h  Ttypes.h
Inclusive_Analysis/starsim/STAR_scripts/: centralDiffractive.C  nonDiffractive.C  reconstruct_all.sh  run_all.sh  singleDiffractive.C
Inclusive_Analysis/starsim/STAR_srcs/: TDataSetIter.cxx
Inclusive_Analysis/starsim/execs/: MC_reconstuction_comparison.cxx  MC_signal_id_efficiency.cxx  Pythia_MCafterGeant_comparison.cxx  Pythia_true_level_reading_test.cxx
Inclusive_Analysis/starsim/include/: StarGenEvent.h  StarGenerator.h  StarParticleData.h  randomJunkNeededToWork.h  starsimLinkDef.h
Inclusive_Analysis/starsim/srcs/: StEvtHddr.cxx  StMemStat.cxx  StarGenParticle.cxx  StarGenerator.cxx  StarParticleData.cxx
Inclusive_Analysis/starsim/starsim_and_bfc/: addPythiaParticles.C  bfc_run.C  bfc_start.sh  bfc_template.xml  centralDiffractive.C  centralDiffractiveK0S.C  centralDiffractiveKstar.C  centralDiffractiveLambda0.C  centralDiffractivePhi.C  centralDiffractiveRun.C  centralDiffractive_generator_start.sh  centralDiffractive_generator_template.xml  centralDiffractive_total_chain_K0S_only_MuDST_start.sh  centralDiffractive_total_chain_K0S_only_MuDST_template.xml  centralDiffractive_total_chain_only_MuDST_start.sh  centralDiffractive_total_chain_only_MuDST_template.xml  centralDiffractive_total_chain_start.sh  centralDiffractive_total_chain_template.xml  compile.sh  doubleDiffractive.C  elastic.C  generator_start.sh  generator_template.xml  job_template.xml  minimal_working_test.xml  nonDiffractive.C  reconstruct_all.sh  reconstruct_centralDiffractive.sh  remove_everything_but_MuDst_and_pythia.sh  singleDiffractive.C  test.sh  testoutput.txt
star-upc/: CMakeLists.txt
star-upc/include/: Afterburner.h  BeamPosition.h  StRPEvent.h  StUPCBemcCluster.h  StUPCEvent.h  StUPCFilterBemcUtil.h  StUPCRpsCluster.h  StUPCRpsTrack.h  StUPCTofHit.h  StUPCV0.h  StUPCVertex.h  Util.h  star-upcLinkDef.h
star-upc/src/: BeamPosition.cxx  StPicoHelix.cxx  StPicoPhysicalHelix.cxx  StUPCBemcCluster.cxx  StUPCEvent.cxx  StUPCRpsCluster.cxx  StUPCRpsTrack.cxx  StUPCRpsTrackPoint.cxx  StUPCTofHit.cxx  StUPCTrack.cxx  StUPCV0.cxx  StUPCVertex.cxx
test/: 0.root  1.root  2.root  3.root  4.root  5.root  6.root  7.root  8.root  9.root  CMakeLists.txt  CPT2  FastTemplate.xml  FastTemplate2.xml  MonteCarloEfficiency.cxx  build.sh  building.sh  pico_K0K0.root  run.sh  run_dime_K0K0.sh  run_dime_K0K0_pico.sh  run_dime_K0K0_pico5.sh  run_dime_LLBar.sh  run_dime_LLBar_pico.sh  run_dime_LLBar_test.sh  run_on_rcf.sh  run_testpico.sh  test.out  test.root
test/include/: Includes.h
test/src/: MonteCarloEfficiency.cxx  ReadFillPositionFile.cxx  StRPEvent.cxx
(+374 files in other folders)
